add category model and implement category controller and routes, update swagger.yaml file
