# backend/swagger.yaml
@@ -16,34 +16,6 @@ components:
       name: express:sess
 
   schemas:
-    Signin:
-      type: object
-      properties:
-        email:
-          type: string
-        password:
-          type: string
-      example:
-        email: test@test.com
-        password: password
-
-    Signup:
-      type: object
-      properties:
-        firstName:
-          type: string
-        lastName:
-          type: string
-        email:
-          type: string
-        password:
-          type: string
-      example:
-        firstName: Test
-        lastName: Test
-        email: test@test.com
-        password: password
-
     User:
       type: object
       properties:
@@ -64,6 +36,19 @@ components:
         createdAt:
           type: string
 
+    Category:
+      type: object
+      properties:
+        name:
+          type: string
+        slug:
+          type: string
+        visible:
+          type: string
+      example:
+        name: Kitchen Ware
+        slug: kitchen-ware
+        visible: ACTIVE
 paths:
   /auth/signup:
     post:
@@ -74,7 +59,21 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/Signup'
+              type: object
+              properties:
+                firstName:
+                  type: string
+                lastName:
+                  type: string
+                email:
+                  type: string
+                password:
+                  type: string
+              example:
+                firstName: Test
+                lastName: Test
+                email: test@test.com
+                password: password
       responses:
         201:
           description: Account created successfully
@@ -90,12 +89,20 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/Signin'
+              type: object
+              properties:
+                email:
+                  type: string
+                password:
+                  type: string
+              example:
+                email: test@test.com
+                password: password
       responses:
         200:
           description: User signed in successfully
         400:
-          description: Bad request
+          description: Invalid credentials
 
   /auth/signout:
     get:
@@ -143,3 +150,136 @@ paths:
                 type: object
                 items:
                   $ref: '#/components/schemas/User'
+
+  /categories:
+    post:
+      summary: Add Category
+      description: Add a new Category
+      security:
+        - cookieAuth: [ ]
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                name:
+                  type: string
+              example:
+                name: Laptops
+      responses:
+        201:
+          description: Category created successfully
+        400:
+          description: Bad request
+        401:
+          description: Unauthorized request
+
+    get:
+      summary: Get Categories
+      description: Retrieves a list of available categories in an array
+      responses:
+        200:
+          description: A list of category JSON objects in an array
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Category'
+
+  /categories/all:
+    get:
+      summary: Get all Categories
+      description: Retrieves a list of all the available categories in the system
+      responses:
+        200:
+          description: A list of all category JSON objects in an array
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Category'
+
+  /categories/{slug}:
+    get:
+      summary: Get a Category
+      description: Retrieves a category based on the slug
+      parameters:
+        - in: path
+          name: slug
+          required: true
+          description: Category slug
+          schema:
+            type: string
+      responses:
+        200:
+          description: A category in the format of a JSON object
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Category'
+        404:
+          description: Not found
+
+    patch:
+      summary: Updates a Category
+      description: Update a specific category based on the slug provided
+      security:
+        - cookieAuth: [ ]
+      parameters:
+        - in: path
+          name: slug
+          required: true
+          description: The Category slug
+          schema:
+            type: string
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                name:
+                  type: string
+                visible:
+                  type: string
+              example:
+                name: Laptops
+                visible: ACTIVE
+
+      responses:
+        200:
+          description: Category updated successfully
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Category"
+        401:
+          description: Unauthorized request
+        404:
+          description: Not found
+
+    delete:
+      summary: Deletes a Category
+      description: Delete a specific category based on the category slug
+      security:
+        - cookieAuth: [ ]
+      parameters:
+        - in: path
+          name: slug
+          required: true
+          description: The category slug
+          schema:
+            type: string
+
+      responses:
+        204:
+          description: Category deleted successfully
+        401:
+          description: Unauthorized request
+        404:
+          description: Not found
